    * [153155] Added the QT_NO_THREADED_GLIB environment variable,
      which tells Qt to use Glib only for the GUI thread.
    * Fixed restoreGeometry() to move a full-screen window to the
      correct position.
    * [155083] Don't use legacy xlfd fonts if we have fontconfig available on Solaris.
    * [150348] Fixed bug where setCursor() would not work properly after setParent().

Windows
-------
    * Added experimental DirectX based paint engine.
    * [141503] When clicked inside the tool windows, it wont be activated if there
      is no child widget to take focus.
    * [153315] Better handling of Synaptic touchpad wheel messages.
    * [150639] Support for CF_DIBV5 format and better support for transparent images
      on clipboard.
    * [146862] Improves readability of progress bar text when shown in Highlight color.
    * [146928] Fixes shortcut events being discarded when AutoRepeat is turned off.
    * [141079] wheelEvent now contains the button information.
    * [149367] QMimeData::formats() returns all the available formats in the object.
    * [135417] WM_SYSCOLORCHANGE will not trigger resetting of fonts.
    * [137023] Fix the crash while translating mouse events.
    * [138349] Fix wrong focus handling with multiple top levels.
    * [111211] Tool windows won't steal focus from their parents while opening.
    * [143812] Fix a bug which can break the widget's ability to maximize after
      saving and restoring its state.
    * [111501] SPI_SETWORKAREA message now triggers a triggers a workAreaResized().
    * [141633] Fixed commandline parsing for GUI applications.
    * [134984] SockAct events wont be triggered from processEvents(ExcludeSocketNotifiers).
    * [134164] The toplevel widgets with MSWindowsFixedSizeDialogHint are centered properly.
    * [145270] Fixed mapFromGlobal() and mapToGlobal() for minimized or
      invisible widgets.
    * [132695] Fixed a potential crash when changing the application style after